test/Fail/InvalidNamePartColon.agda
test = forall _:_ → Set
